--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -12,18 +12,31 @@ html {
     font-size: 125%;
 
     body {
-        font-family: $baseFont;
+        // font-family: $baseFont;
+        text-align: center;
     }
     
     h1,
     h2,
     h3,
-    h4 {
-        $titleFont:
+    h4,
+    p,
+    label {
+        // font-family: $titleFont;
+        text-align: center;
+        color: $white;
+        margin: 0 auto;
+        padding: 2% 0;
+    }
+
+    h1 {
+        font-size: 4rem;
     }
 }
 
 .wrapper {
     max-width: 800px;
     width: 50%;
+    margin: 0 auto;
 }
+
