--- a/styles/sass/style.css
+++ b/styles/sass/style.css
@@ -181,6 +181,8 @@ legend, button::-moz-focus-inner, input::-moz-focus-inner {
 
 main {
   background-image: url(../assets/darkWorld.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
   min-height: 110vh;
 }
 
@@ -234,8 +236,12 @@ main fieldset .radioChoices .sleepyTime {
           flex-flow: column wrap;
 }
 
-main fieldset input {
+main fieldset label {
   padding: 3% 0;
+}
+
+main fieldset .finale {
+  padding: 2% 0;
 }
 
 footer {
