--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -24,7 +24,7 @@ html {
     label {
         // font-family: $titleFont;
         text-align: center;
-        color: $white;
+        // color: $white;
         margin: 0 auto;
         padding: 2% 0;
     }
@@ -36,7 +36,7 @@ html {
 
 .wrapper {
     max-width: 800px;
-    width: 50%;
+    width: 90%;
     margin: 0 auto;
 }
 
