--- a/styles/sass/_index.scss
+++ b/styles/sass/_index.scss
@@ -33,7 +33,7 @@ main {
     fieldset {
         display: flex;
         flex-flow: column wrap;
-        padding: 15% 0;
+        // padding: 15% 0;
         margin: 3% 0;
         border: none;
 
@@ -45,11 +45,6 @@ main {
             display: flex;
             justify-content: space-around;
             align-items: center;
-
-            .sleepyTime {
-                display: flex;
-                flex-flow: column wrap;
-            }
         }
 
         label {
