--- a/styles/sass/_variables.scss
+++ b/styles/sass/_variables.scss
@@ -3,11 +3,15 @@
 
 $white: #fff;
 $black: #000;
+$midnight: #152E56;
+$darkblue: #123D5F;
+$darkteal: #476678;
+$lightteal: #A7B6B5;
 
 
 
 
 // Fonts
 
-// $titleFont:
-// $baseFont:
+$titleFont: 'Crimson Text', serif;
+$baseFont: 'Raleway', sans-serif;
