--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -12,7 +12,7 @@ html {
     font-size: 125%;
 
     body {
-        // font-family: $baseFont;
+        font-family: $baseFont;
         text-align: center;
     }
     
@@ -24,14 +24,26 @@ html {
     label {
         // font-family: $titleFont;
         text-align: center;
-        // color: $white;
+        color: $white;
         margin: 0 auto;
         padding: 2% 0;
     }
 
     h1 {
         font-size: 4rem;
+        font-family: $titleFont;
     }
+}
+
+button {
+    background-color: $darkblue;
+    border: none;
+    color: $white;
+    text-transform: uppercase;
+    min-width: 320px;
+    padding: 10px 20px;
+    border-radius: 500px;
+    margin: 0 auto;
 }
 
 .wrapper {
