--- a/styles/sass/_index.scss
+++ b/styles/sass/_index.scss
@@ -1,3 +1,5 @@
+// Partial Imports
+
 @import "queries";
 @import "setup";
 @import "variables";
@@ -41,7 +43,6 @@ main {
             display: flex;
             justify-content: center;
             align-items: center;
-
         }
         
         .answerThree {
@@ -59,6 +60,11 @@ main {
 
     .time {
         background: $lightteal;
+
+        p,
+        label {
+            color: $black;
+        }
     }
 
     .hours {
