--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -40,7 +40,7 @@ button {
     border: none;
     color: $white;
     text-transform: uppercase;
-    min-width: 320px;
+    max-width: 320px;
     padding: 10px 20px;
     border-radius: 500px;
     margin: 0 auto;
