--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,27 @@
+@media (max-width: 940px) {
+  p.introText {
+    color: #000;
+  }
+}
+
+@media (max-width: 480px) {
+  header h1.title {
+    padding-top: 25%;
+  }
+  header .sleepIntro h2 {
+    color: #000;
+  }
+}
+
+@media (max-width: 320px) {
+  header h1.title {
+    padding-top: 40%;
+  }
+  button {
+    max-width: 250px;
+  }
+}
+
 article, aside, details, figcaption, figure, footer, header, hgroup, nav, section, summary {
   display: block;
 }
@@ -249,6 +273,11 @@ main .time {
   background: #A7B6B5;
 }
 
+main .time p,
+main .time label {
+  color: #000;
+}
+
 main .hours {
   background: #476678;
 }
@@ -266,6 +295,30 @@ main .sleepReset {
 
 footer {
   background: #000;
+}
+
+@media (max-width: 940px) {
+  p.introText {
+    color: #000;
+  }
+}
+
+@media (max-width: 480px) {
+  header h1.title {
+    padding-top: 25%;
+  }
+  header .sleepIntro h2 {
+    color: #000;
+  }
+}
+
+@media (max-width: 320px) {
+  header h1.title {
+    padding-top: 40%;
+  }
+  button {
+    max-width: 250px;
+  }
 }
 
 article, aside, details, figcaption, figure, footer, header, hgroup, nav, section, summary {
@@ -480,7 +533,7 @@ button {
   border: none;
   color: #fff;
   text-transform: uppercase;
-  min-width: 320px;
+  max-width: 320px;
   padding: 10px 20px;
   border-radius: 500px;
   margin: 0 auto;
